Commit final de l'exercice

--- a/Ansible/post-tf.yaml
+++ b/Ansible/post-tf.yaml
@@ -6,7 +6,7 @@
 
   vars:
     project: demo-tf
-    app: nginx-unpriv
+    app: apache-unpriv
 
   tasks:
     - name: 1. En attente de la fin du déploiement Terraform...
